{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 152,
  "lineage": "76896dbe-60f0-e1c4-1014-f390137c3759",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "carts_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:319978541095:security-group/sg-0fc32f3466ef24308",
            "description": "Allow 22_8081 port inbound traffic",
            "egress": [],
            "id": "sg-0fc32f3466ef24308",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "carts_sg",
            "name_prefix": null,
            "owner_id": "319978541095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_to_carts"
            },
            "timeouts": null,
            "vpc_id": "vpc-d76866bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:319978541095:security-group/sg-013c47b5313eb335c",
            "description": "Allow 22_27017 port inbound traffic",
            "egress": [],
            "id": "sg-013c47b5313eb335c",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "database_sg",
            "name_prefix": null,
            "owner_id": "319978541095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_local_to_database"
            },
            "timeouts": null,
            "vpc_id": "vpc-d76866bc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:319978541095:security-group/sg-009668babb589b5af",
            "description": "Allow 22_8080 port inbound traffic",
            "egress": [],
            "id": "sg-009668babb589b5af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_sg",
            "name_prefix": null,
            "owner_id": "319978541095",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_to_jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-d76866bc"
          }
        }
      ]
    }
  ]
}